feat: initial GameProvider work