@@ -1,22 +1,34 @@
 package org.aequoreus.hellofabric;
 
+import net.fabricmc.loader.api.metadata.*;
 import net.fabricmc.loader.impl.game.GameProvider;
 import net.fabricmc.loader.impl.game.patch.GameTransformer;
 import net.fabricmc.loader.impl.launch.FabricLauncher;
+import net.fabricmc.loader.impl.metadata.BuiltinModMetadata;
 import net.fabricmc.loader.impl.util.Arguments;
 
-import java.lang.reflect.Method;
+import java.io.File;
+import java.io.IOException;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
+import java.nio.file.Paths;
+import java.util.*;
+import java.util.jar.Attributes;
+import java.util.jar.JarFile;
+import java.util.jar.Manifest;
+import java.util.regex.Pattern;
+import java.util.stream.Stream;
 
 public class HMCLProvider implements GameProvider {
+    private final GameTransformer transformer = new GameTransformer(new EntrypointPatch());
 
-    private Path gameDir;
     private Arguments arguments;
-    private List<Path> jars = new ArrayList<>();
+    private List<Path> classPath;
+    private String entrypoint;
+    private String version;
 
     @Override
     public String getGameId() {
@@ -25,42 +37,51 @@ public class HMCLProvider implements GameProvider {
 
     @Override
     public String getGameName() {
-        return "HMCL";
+        return "Hello! Minecraft Launcher";
     }
 
     @Override
     public String getRawGameVersion() {
-        return "3.6.17";
+        return version;
     }
 
     @Override
     public String getNormalizedGameVersion() {
-        return "3.6.17";
+        return version;
     }
 
     @Override
     public Collection<BuiltinMod> getBuiltinMods() {
-        return Collections.emptyList();
+        BuiltinModMetadata.Builder metadata = new BuiltinModMetadata.Builder(getGameId(), getNormalizedGameVersion())
+                .setName(getGameName());
+
+        return List.of(
+                new BuiltinMod(classPath, metadata.build())
+        );
     }
 
     @Override
     public String getEntrypoint() {
-        return "";
+        return this.entrypoint;
     }
 
     @Override
     public Path getLaunchDirectory() {
-        return this.gameDir;
-    }
-
-    @Override
-    public boolean isObfuscated() {
-        return false;
+        try {
+            return Paths.get(".").toRealPath();
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to resolve launch dir", e);
+        }
     }
 
     @Override
     public boolean requiresUrlClassLoader() {
         return false;
+    }
+
+    @Override
+    public Set<BuiltinTransform> getBuiltinTransforms(String className) {
+        return Set.of(BuiltinTransform.CLASS_TWEAKS);
     }
 
     @Override
@@ -70,40 +91,81 @@ public class HMCLProvider implements GameProvider {
 
     @Override
     public boolean locateGame(FabricLauncher fabricLauncher, String[] args) {
-        Arguments arguments = new Arguments();
+        this.arguments = new Arguments();
         arguments.parse(args);
-        this.arguments = arguments;
 
-        return false;
+        Path launchDir = getLaunchDirectory();
+        Pattern filenamePattern = Pattern.compile("HMCL-\\d+\\.\\d+\\.\\d+\\.jar$|HMCL-\\d+\\.\\d+\\.\\d+\\.\\d+\\.jar$");
+        Path gameJar;
+        if (arguments.containsKey("gameDir")) {
+            gameJar = launchDir.resolve(arguments.get("gameDir"));
+        } else try (Stream<Path> paths = Files.find(launchDir, 1, (path, attrs)
+                -> filenamePattern.matcher(path.getFileName().toString()).matches() && attrs.isRegularFile())) {
+            gameJar = paths.findFirst().orElseThrow(() -> new RuntimeException("Failed to find HMCL jar"));
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
+        entrypoint = "com.jackhuang.hmcl.Main";
+        version = "999.999.999";
+        try (JarFile jarFile = new JarFile(gameJar.toFile())) {
+            Manifest manifest = jarFile.getManifest();
+            if (manifest != null) {
+                Attributes attrs = manifest.getMainAttributes();
+                entrypoint = attrs.getValue(Attributes.Name.MAIN_CLASS);
+                version = attrs.getValue(Attributes.Name.IMPLEMENTATION_VERSION);
+            }
+        } catch (IOException ignored) {}
+
+        classPath = List.of(gameJar);
+
+        return true;
     }
 
     @Override
     public void initialize(FabricLauncher fabricLauncher) {
+        List<Path> parentClassPath = Stream.of(System.getProperty("java.class.path").split(File.pathSeparator))
+                .map(Path::of)
+                .map((path) -> {
+                    try {
+                        return path.toRealPath();
+                    } catch(IOException e) {
+                        throw new RuntimeException("Failed to get real path of " + path, e);
+                    }
+                })
+                .filter((path) -> !classPath.contains(path))
+                .toList();
 
+        fabricLauncher.setValidParentClassPath(parentClassPath);
+
+        transformer.locateEntrypoints(fabricLauncher, classPath);
     }
 
     @Override
     public GameTransformer getEntrypointTransformer() {
-        return null;
+        return transformer;
     }
 
     @Override
     public void unlockClassPath(FabricLauncher fabricLauncher) {
-        for (Path jar : this.jars) {
-            fabricLauncher.addToClassPath(jar);
-        }
+        classPath.forEach(fabricLauncher::addToClassPath);
     }
 
     @Override
-    public void launch(ClassLoader classLoader) {
+    public void launch(ClassLoader loader) {
+        MethodHandle invoker;
         try {
-            Class main = classLoader.loadClass(this.getEntrypoint());
-            Method method = main.getMethod("main", String[].class);
-
-            method.invoke(null, (Object) getLaunchArguments(true));
+            Class<?> target = loader.loadClass(getEntrypoint());
+            invoker = MethodHandles.lookup().findStatic(target, "main", MethodType.methodType(void.class, String[].class));
+        } catch (ClassNotFoundException | NoSuchMethodException | IllegalAccessException e) {
+            throw new RuntimeException("Failed to find entry point", e);
         }
-        catch (Exception e) {
-            e.printStackTrace();
+
+        try {
+            //noinspection ConfusingArgumentToVarargsMethod
+            invoker.invokeExact(arguments.toArray());
+        } catch (Throwable e) {
+            throw new RuntimeException("Failed to launch", e);
         }
     }
 
@@ -113,7 +175,7 @@ public class HMCLProvider implements GameProvider {
     }
 
     @Override
-    public String[] getLaunchArguments(boolean b) {
+    public String[] getLaunchArguments(boolean sanitize) {
         return getArguments().toArray();
     }
 }
